added a submit button to add session form and implemented view sessions front end using jQuery UI

--- a/Sprint2/SPRINT2_VIEWS/add_session.html
+++ b/Sprint2/SPRINT2_VIEWS/add_session.html
@@ -111,7 +111,8 @@
                 <option value="722">722</option>
                 <option value="721">721</option>
             </select>
-            <br />
+            <br /><br />
+            <button type="submit" name="submit_data">Add session</button>            
         </form>
         
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
